--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
   </div>
 
-  <!-- Commands -->
+  <!-- Commands section -->
   <div class="commands" id="commands">
     <div class="commands__container">
       <h1 class="commands__header">Commands</h1>
