--- a/Reblink/index.html
+++ b/Reblink/index.html
@@ -10,7 +10,7 @@
 
 <body>
   
-  <!-- Navbar -->
+  <!-- Navbar test-->
   <nav class="navbar">
     <div class="navbar__container">
       <a href="#top"><img id="NavLogo" src="images/ReblinkLogo.png" class="NavLogo" id="NavLogo" alt=""></a>
